# bitpanda-mcp

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  uv-lock.yml
ci/docker/: Dockerfile  entrypoint.sh
src/bitpanda_mcp/: __init__.py  auth.py  config.py  logging.py  server.py
src/bitpanda_mcp/clients/: __init__.py  base.py  bitpanda.py
src/bitpanda_mcp/models/: assets.py  common.py  market.py  transactions.py  wallets.py
src/bitpanda_mcp/prompts/: portfolio.py
src/bitpanda_mcp/resources/: assets.py
src/bitpanda_mcp/tools/: assets.py  market.py  portfolio.py  trading.py  transactions.py  wallets.py
tests/: conftest.py  test_assets.py  test_auth.py  test_base_client.py  test_clients.py  test_config.py  test_logging.py  test_market.py  test_package.py  test_portfolio.py  test_prompts.py  test_resources.py  test_server.py  test_trading.py  test_transactions.py  test_wallets.py
